# the-art-of-order

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  tao.code-workspace  tao.spec
scripts/: build.ps1  init.sh  lint.sh  release-linux.sh  release-windows.sh
scripts/linux/: build.sh  init.sh
scripts/windows/: build-nuitka.ps1  build.ps1  init.ps1  lint.ps1
src/: tao.py
src/config/: colors.py  common.py  player.py  settings.py
src/framework/: logger.py
src/framework/spritesheet/: __init__.py
src/player/: __init__.py  camera.py
src/static/: map.txt
src/world/: __init__.py  block.py
src/world/tile/: __init__.py  grass.py  stone_brick.py  wall.py
