[tool.poetry]
name = "the-art-of-order"
version = "0.1.0"
description = "The game about order and chaos"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
pygame = "2.0.0.dev12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
