[tool.poetry]
name = "tao"
version = "0.2.0"
description = "The game about order and chaos"
authors = ["Ilya Chesalin <ilya.chesalin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pygame = "2.0.0.dev12"
colorlog = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"
isort = "5.5.4"
Nuitka = "0.6.9.3"
pyinstaller = "4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
